# conceptMeta

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
case-study/: 19139-schema.xsd  Dataset_metadata_2.0_example.xml
case-study/fisbroker-berlin/: insipre-alkis-gebäude.xml
output/: README.md  conceptMeta_INSPIRE_dataset.xml  pygeometa_19139.xml
src/: README.md  cli.py  conceptMeta.py  extractInspireInfoStrategy.py  registerDistributions.py  settings.py
src/config/: README.md  config.yml  config_template_approach.yml  pygeometa.yml  utils.py
src/inspire/: README.md  createDatasetFromTemplate.py  createDatasetSeries.py  createNewDataset.py  createNewDatasetSeries.py  createNewDatasetService.py  extractInspireInfoStrategy.py  interface.py  templateModels.py
src/inspire/data/: inspire-simplification-mapping.json
src/inspire/templates/: inspire-dataset.xml  inspire-distributionInfo.xml
src/inspire/validation/: callValidationService.py
src/inspire/xmlWrap/: README.md  utils.py
src/metaRegister/: README.md  extractProcessInfo.py  inspire-template.xml  jsonld.json  manageEtlInputDatasetsMetadata.py  schema.json  template.json
src/xml/: namespaces.py  parse.py  utils.py
src/xmlWrap/: README.md  parse.py
