[project]
name = "conceptmeta"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pre-commit>=4.0.1",
    "lxml==5.3.0",
    "pyyaml==6.0.2",
    "cfgv==3.4.0",
    "distlib==0.3.9",
    "filelock==3.16.1",
    "nodeenv==1.9.1",
    "platformdirs==4.3.6",
    "virtualenv==20.28.0",
    "identify==2.6.3",
]
